@@ -5,7 +5,8 @@ Changelog
 1.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Extended NotificationForm to show members of groups on request.
+  [lknoepfel]
 
 
 1.2.4 (2014-02-10)
